--- a/Haskell/turtle.html
+++ b/Haskell/turtle.html
@@ -1,1 +1,1 @@
-<html><body><svg width="500" height="500"><path d="M 250 250 l 60 0 l 0 -30 l 30 0 " stroke="rgb(52,140,73)" stroke-width="3" fill="none"/></svg></body></html>
+<html><body><svg width="500" height="500"><path d="M 250 250 l 60 0 l 0 60 " stroke="rgb(161,61,223)" stroke-width="3" fill="none"/></svg></body></html>
