--- a/Haskell/turtle/turtle.html
+++ b/Haskell/turtle/turtle.html
@@ -1,1 +1,1 @@
-<html><body><svg width="3000" height="3000"><path d="M 0 0 l 0 30 " stroke="rgb(52,54,193)" stroke-width="3" fill="none"/></svg></body></html>
+<html><body><svg width="500" height="500"><path d="M 250 250 l 42 42 l 42 42 l -42 42 l -42 -42 l 42 -42 l -42 -42 l 42 -42 l 42 -42 l 42 42 l -42 42 l -42 -42 l -42 42 l -42 -42 l -42 -42 l 42 -42 l 42 42 l -42 42 l 42 42 l -42 42 l -42 42 l -42 -42 l 42 -42 l 42 42 l 42 -42 " stroke="rgb(100,82,40)" stroke-width="3" fill="none"/></svg></body></html>
