--- a/Haskell/turtle/repeat.html
+++ b/Haskell/turtle/repeat.html
@@ -1,1 +1,1 @@
-<html><body><svg width="1500" height="1500"><path d="M 200.0 200.0 l 100.0 0.0 l -4.371139e-6 100.0 l -100.0 -8.742278e-6 l 1.1924881e-6 -100.0 " stroke="rgb(176,19,41)" stroke-width="3" fill="none"/></svg></body></html>
+<html><body><svg width="1500" height="1500"><path d="M 200.0 200.0 l 100.0 0.0 l 49.999996 86.60255 l -50.000008 86.60254 l -100.0 -8.742278e-6 l -49.999992 -86.60255 l 49.999992 -86.60255 " stroke="rgb(136,208,19)" stroke-width="3" fill="none"/></svg></body></html>
